[gd_scene load_steps=4 format=3 uid="uid://dam8hk4olpma6"]

[ext_resource type="Texture2D" uid="uid://55rxnr1pl2v0" path="res://Assets/Background/Green.png" id="1_irb4n"]
[ext_resource type="Script" path="res://Games/random_reach/Scripts/results.gd" id="1_v4ets"]
[ext_resource type="Texture2D" uid="uid://dxym1ij7wtw5t" path="res://analysis.png" id="3_f8wfg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v4ets")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_irb4n")
stretch_mode = 1

[node name="rom_value" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -226.0
offset_top = 150.0
offset_right = -107.0
offset_bottom = 192.0
grow_horizontal = 2
scale = Vector2(1, 0.962076)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "None"

[node name="max_x_value" type="Label" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 363.0
offset_right = 469.0
offset_bottom = 405.0
scale = Vector2(1, 0.962076)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "None"

[node name="max_y_value" type="Label" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 294.0
offset_right = 469.0
offset_bottom = 336.0
scale = Vector2(1, 0.962076)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "None"

[node name="rom_label" type="Label" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 114.0
offset_right = 341.0
offset_bottom = 201.0
theme_override_colors/font_color = Color(0.988235, 0.556863, 0.768627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Range of motion 
(ROM)"
horizontal_alignment = 1

[node name="rom_label2" type="Label" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 295.0
offset_right = 327.0
offset_bottom = 344.0
theme_override_colors/font_color = Color(0.988235, 0.556863, 0.768627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Max Y-reach"
horizontal_alignment = 1

[node name="rom_label3" type="Label" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 358.0
offset_right = 326.0
offset_bottom = 407.0
theme_override_colors/font_color = Color(0.988235, 0.556863, 0.768627, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Max X-reach"
horizontal_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 576.0
offset_top = 128.0
offset_right = 1014.0
offset_bottom = 494.0
texture = ExtResource("3_f8wfg")
expand_mode = 1
